Update java.text package to android13 release
#J2ObjC_Android13_JRE_Upgrade_2022

PiperOrigin-RevId: 502696053